--- a/index.html
+++ b/index.html
@@ -32,35 +32,16 @@
 		footer {
 			text-align:center;
 			clear:both; /* ride below all items */
-			}
-		nav{
-			text-align:center; /* centers the nav */
 		}
-		
-		nav ul {
-				list-style:none; /* removes the bullets */
-			}
-		nav ul li
-			{
-				display:inline-block; /* makes horizontal, but able to declare margins */
-				margin:0 2%; /* margin left-right, gets smaller as necessary */
-			}
-		nav a:hover{
-			text-decoration: none;
-		}	
     </style>
 </head>
 <body>
 	<header>
 		<h1 class="masthead">Time of Day</h1>
-
 	</header>
     <main>
 	 <header><h3>Time of Day by YOUR NAME HERE</h3></header>
-	 <p>This page was taken from an HTML5 Flexible template that could be a good starting point for some of your projects.  The template file starts by setting a background color on the HTML element, and setting max-width on the body, which is styled like a wrapper.  The BODY element is also set to a percentage width so it leaves a bit of HTML color until it shrinks in size toward the mobile view.</p>
-	 <p>There is an image with a class of FLEXIBLE which is set to a max-width equal to the size of the image.  Simutaneously the class sets the image to a percentage width, allowing the image to flex in size.  The height is not changed, as this would skew the image.</p>
-	 <p>The LIST elements inside the NAV are displayed inline by setting the display to be inline-block.  Bullets are removed by setting the UL to display</p>
-	 <p>The FOOTER includes a clear:both to keep everything above it!</p>
+	    <p>Explain what your page does and how it works here!</p>
 	  <img src="http://dummyimage.com/300x400" alt="Time of Day Image" class="flexible">
      <footer>
       <p><small>&copy; 2022 by 
