--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 		<h1 class="masthead">Time of Day</h1>
 	</header>
     <main>
-	 <header><h3>Time of Day by YOUR NAME HERE</h3></header>
+	 <header><h3>A JavaScript Project by YOUR NAME HERE</h3></header>
 	    <p>Explain what your page does and how it works here!</p>
 	  <img src="http://dummyimage.com/300x400" alt="Time of Day Image" class="flexible">
      <footer>
