--- a/index.html
+++ b/index.html
@@ -5,53 +5,119 @@
     <title>Time of Day</title>
     <meta name="robots" content="noindex,nofollow">
     <style>
-		* {padding:0; margin:0;}
-		html {background-color:#ccc;}
-		body {
-			font-family: Arial, Helvetica, sans-serif;
-			max-width:960px; /* keeps from getting too large on wide screen */
-			width:90%; /* shrink to fit screen */
-			margin:auto; /* center in html element */
-			background-color:#fff;
-			padding:20px;
-			min-height:100%; /* keeps from getting too large on wide screen */
-			}
-		img.flexible {
-			float:right;
-			display:inline-block;
-			padding:20px;
-			max-width:300px; /* actual size of image */
-			width:33%; /* approximate size taken on screen in maximum view */
-		}
-		p {margin:10px;}
-		h1,h2,h3,h4,h5,h6{
-			font-weight:normal;
-			margin:10px;
-			}
-		h1.masthead {margin-top:0;}
-		footer {
-			text-align:center;
-			clear:both; /* ride below all items */
-		}
+        * {padding:0; margin:0;}
+        html {background-color:#ccc;}
+        body {
+            font-family: Arial, Helvetica, sans-serif;
+            max-width:960px; /* keeps from getting too large on wide screen */
+            width:90%; /* shrink to fit screen */
+            margin:auto; /* center in html element */
+            background-color:#fff;
+            padding:20px;
+            min-height:100%; /* keeps from getting too large on wide screen */
+            }
+        img.flexible {
+            float:right;
+            display:inline-block;
+            padding:20px;
+            max-width:300px; /* actual size of image */
+            width:33%; /* approximate size taken on screen in maximum view */
+        }
+        p {margin:10px;}
+        h1,h2,h3,h4,h5,h6{
+            font-weight:normal;
+            margin:10px;
+            }
+        h1.masthead {margin-top:0;}
+        footer {
+            text-align:center;
+            clear:both; /* ride below all items */
+        }
     </style>
 </head>
 <body>
-	<header>
-		<h1 class="masthead">Time of Day</h1>
-	</header>
+    <header>
+        <h1 class="masthead">Time of Day</h1>
+    </header>
     <main>
-	 <header><h3>A JavaScript Project by YOUR NAME HERE</h3></header>
-	    <p>Explain what your page does and how it works here!</p>
-	  <img src="http://dummyimage.com/300x400" alt="Time of Day Image" class="flexible">
+     <header><h3>A JavaScript Project by Kingzy Valcourt</h3></header>
+     <h3 id="my-greeting">Greeting goes here</h3>
+        <p>Explain what your page does and how it works here!</p>
+      <img id="my-pic"src="http://dummyimage.com/300x400" alt="Time of Day Image" class="flexible">
      <footer>
-      <p><small>&copy; 2022 by 
-          YOUR NAME HERE, All Rights Reserved ~ 
-          <a id="html-checker" href="#" target="_blank">Check HTML</a> ~ 
+      <p><small>&copy; 2022-<span id="my-copyright">year goes here</span> by
+          Kingzy Valcourt, All Rights Reserved ~
+          <a id="html-checker" href="#" target="_blank">Check HTML</a> ~
           <a id="css-checker" href="#" target="_blank">Check CSS</a></small>
      </p>
     </footer>
   </main>
  <script>
+
+
+/*
+    Create a web page that uses JavaScript to determine the current hour,
+    and presents a different image, custom message, and color
+    based on each of the following times of day:
+
+
+    Morning (5am to 12 noon)
+    Afternoon (12 noon to 6pm)
+    Evening (6pm to 11pm)
+    Night (11pm to 5am)
+*/
+    let myDate = new Date();
+    let myHour = myDate.getHours();
+	let myYear = myDate.getFullYear();
+    let myGreeting = "";
+    let myColor ="";
+    let myPic = "";
+    myHour = 23;
+
+
+    console.log(myHour)
+
+
+    if(myHour >= 5 && myHour < 12){
+        //alert("good morning!");
+        myGreeting = "Good Morning!";
+        myColor = "orange";
+        myPic = "morning.jpg";
+
+
+    }else if(myHour >= 12 && myHour < 18){
+        //alert("good afternoon!");
+        myGreeting = "Good Afternoon!";
+        myColor = "green";
+        myPic = "afternoon.jpg";
+
+    }else if(myHour >= 18 && myHour < 23){
+        //alert("good afternoon!");
+        myGreeting = "Good Evening!";
+        myColor = "purple";
+        myPic = "evening.jpg";
+		
+    }else{
+        //alert("good afternoon!");
+        myGreeting = "Good Night!";
+        myColor = "blue";
+        myPic = "night.jpg";
+    }
+   
+    myPic = "images/" + myPic;
+
+
+    document.getElementById("my-greeting").innerHTML = myGreeting;
+
+
+    document.querySelector("html").style.backgroundColor = myColor;
+
+
+    document.getElementById("my-pic").src = myPic;
+
+	document.getElementById("my-copyright").innerHTML = myYear;
+
+
     document.getElementById("html-checker").setAttribute("href","https://validator.w3.org/nu/?doc=" + location.href);
     document.getElementById("css-checker").setAttribute("href","https://jigsaw.w3.org/css-validator/validator?uri=" + location.href);  
  </script>
